2010-09-25  Romain Francois <romain@r-enthusiasts.com>

        * inst/include/Rpp/Fast.h: new helper class Rcpp::Fast that 

2010-09-25  Romain Francois <romain@r-enthusiasts.com>

        * inst/include/Rcpp/routines.h: declare routines that are registered

        * src/Rcpp_init.c: register routines

        * R/*.R: use registration information in many .Call and .External functions
        to speed things up

        * inst/include/Rcpp/RangeIndexer.h: experimenting with loop unrolling

2010-09-24  Romain Francois <romain@r-enthusiasts.com>

        * inst/include/Rcpp/sugar/Range.h : Range gains some operators (++,--,n etc ...)

        * inst/examples/ConvolveBenchmarks/convolve3_cpp.cpp: using the new Range
        operators

        * inst/include/Rcpp/sugar/operators/times.h: speed improvements. Not using
        pointer to member functions seems to be beneficial.

        * inst/include/Rcpp/sugar/nona/nona.h: sugar function that wraps a sugar
        expression in an object that pretends it does not contain any missing
        values. This allows many sugar functions and operators to use their
        fast versions when we know that the object does not contain missing values.

2010-09-22  Romain Francois <romain@r-enthusiasts.com>

        * R/Module.R: set [[ and [[<- as regular methods too, which restores previous
        behavior

2010-09-17  Romain Francois <romain@r-enthusiasts.com>

        * src/Reference.cpp: new objects are created via a callback to R's new
        function, as R_do_new_object did always return the same environment

        * R/00_classes.R: new ref class C++Method to represent C++ methods and holding
        their external pointers directly (same idea as C++Field)

        * inst/include/Rcpp/Module.h: internal support for C++Method (template class
        S4_CppMethod)

2010-09-16  Romain Francois <romain@r-enthusiasts.com>

        * R/00_classes.R: moving classes definition here
