@@ -1,6 +1,10 @@
-2010-09-25  Romain Francois <romain@r-enthusiasts.com>
+2010-09-26  Romain Francois <romain@r-enthusiasts.com>
 
-        * inst/include/Rpp/Fast.h: new helper class Rcpp::Fast that 
+        * inst/include/Rpp/Fast.h: new helper class Rcpp::Fast that allows
+        faster indexing of Vector
+        
+        * inst/include/Rcpp/sugar/operators/plus.h: port to operator+ the same 
+        improvements than in operator*
 
 2010-09-25  Romain Francois <romain@r-enthusiasts.com>
 
